# aiworkflow

./: .gitignore  CLAUDE.md  HANDOFF-NEW-SESSION.md  PROJECT_MEMORY.md  README.md  ecosystem.config.cjs  package-lock.json  package.json
.claude/: settings.json
.claude/agents/: vps-devops.md
.github/workflows/: deploy.yml
cert/: Chain_RootCA_Bundle.crt  www_thhflow_com_cert.pem
client/: index.html  package-lock.json  package.json
client/src/: App.jsx  index.css
client/src/hooks/: useKeyboardShortcut.js
client/src/services/: Logo.jsx  api.js  icons.jsx  nodeTypes.js  socket.js
mcp-server/: .env.example  .test-mcp-input.json  index.js  package-lock.json  package.json  test-token-refresh.js  test_refresh.js
mcp-server/lib/: broker-client.js  db.js  firefox-refresh.js  google-flow-api.js  media-cache.js  progress.js  recaptcha.js  token-refresh.js
mcp-server/tools/: generate-image.js  generate-video.js  list-credentials.js  upscale-image.js  upscale-video.js
nginx/: vcw.conf
python-broker/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
python-broker/broker/: __main__.py  app.py  config.py  cookies.py  flow.py  login.py  profile_cookies.py  profile_reload.py  profile_snapshot.py  session_pool.py
python-broker/deploy/: broker.env.example  vcw-flow-broker.service  xvfb.service
python-broker/scripts/: docker-entrypoint.sh  e2e_broker_test.py  manual-login.sh  setup_vps.sh  smoke_test.py  test_reload_recovery.py
scripts/: setup-vps.sh  update-ollama-pw.sh
server/: .env.example  .env.production.example  migrate-flow-video-models.mjs  package-lock.json  package.json  test-recaptcha-vps.mjs
server/chatgpt-extension/: background.js  content.js  manifest.json  popup.html  popup.js
server/prisma/: migrate-gemini-models.js  schema.prisma
server/src/: index.js
server/src/connectors/: base-connector.js  registry.js
server/src/middleware/: auth.middleware.js  error.middleware.js  (+1 more)
(+66 files in other folders)
